--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
 	"devDependencies": {
 		"@types/node": "^20.8.10",
 		"eslint": "^8.52.0",
-		"esmakefile": "^0.5.0",
+		"esmakefile": "^0.5.2",
 		"prettier": "^3.0.3",
 		"tsc": "^2.0.4",
-		"typescript": "^5.2.2"
-	},
-	"dependencies": {
-		"esmakefile-c": "^0.3.0"
+		"typescript": "^5.2.2",
+		"esmakefile-c": "^0.3.1"
 	}
 }
