--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
 		"@types/node": "^20.8.10",
 		"eslint": "^8.52.0",
 		"esmakefile": "^0.5.2",
+		"esmakefile-c": "^0.3.1",
 		"prettier": "^3.0.3",
 		"tsc": "^2.0.4",
 		"typescript": "^5.2.2",
-		"esmakefile-c": "^0.3.1"
+		"webpack": "^5.89.0"
 	}
 }
