--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-	"type": "module",
-	"main": "build/browser.js",
+	"main": "build/webpack/browser.cjs",
 	"devDependencies": {
 		"@types/node": "^20.8.10",
 		"electron": "^28.0.0",
