--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
 	"main": "build/webpack/browser.cjs",
 	"devDependencies": {
 		"@types/node": "^20.8.10",
+		"ajv": "^6.12.6",
 		"electron": "^28.0.0",
 		"eslint": "^8.52.0",
-		"esmakefile": "^0.5.2",
-		"esmakefile-c": "^0.3.1",
+		"espkg-config": "^0.1.1",
 		"prettier": "^3.0.3",
 		"ts-loader": "^9.5.1",
 		"tsc": "^2.0.4",
 		"typescript": "^5.3.2",
 		"webpack": "^5.89.0"
+	},
+	"dependencies": {
+		"esmakefile": "^0.6.1"
 	}
 }
