--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"include": ["src/server/*.ts"],
+	"include": ["src/server/*.ts", "test/*.ts"],
 	"compilerOptions": {
 		"target": "es6",
 		"module": "Node16",
