--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
 	"main": "build/webpack/browser.cjs",
 	"devDependencies": {
 		"@types/node": "^20.8.10",
-		"ajv": "^6.12.6",
 		"electron": "^28.0.0",
 		"eslint": "^8.52.0",
-		"espkg-config": "^0.1.1",
+		"esmakefile-cmake": "^0.1.5",
 		"prettier": "^3.0.3",
 		"ts-loader": "^9.5.1",
 		"tsc": "^2.0.4",
