--- a/.github/workflows/test-push.yml
+++ b/.github/workflows/test-push.yml
@@ -3,15 +3,41 @@ name: Push Tests
 on: [push]
 
 jobs:
-  unit-tests:
+  install-boost:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [macos-latest]
     steps:
       - uses: actions/checkout@v4
-      - name: Install Boost
+      - name: Cache Boost
+        id: cache-boost
+        uses: actions/cache@v4
+        with:
+          path: vendor
+          key: ${{ runner.os }}-boost-${{ hashFiles('script/install-boost.sh', 'script/util.sh') }}
+      - if: ${{ steps.cache-boost.outputs.cache-hit != 'true' }}
+        name: Install Boost
         run: script/install-boost.sh
+  unit-tests:
+    needs: install-boost
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [macos-latest]
+    steps:
+      - name: Restore Boost
+        id: restore-boost
+        uses: actions/cache@v4
+        with:
+          path: vendor
+          key: ${{ runner.os }}-boost-${{ hashFiles('script/install-boost.sh', 'script/util.sh') }}
+      - if: ${{ steps.cache-boost.outputs.cache-hit != 'true' }}
+        name: Report Failure
+        run: |
+          echo "Boost cache failed to restore"
+          exit 1
+      - uses: actions/checkout@v4
       - name: Install libarchive
         run: script/install-libarchive.sh
       - name: Install Lighter Dependencies
