--- a/.github/workflows/test-push.yml
+++ b/.github/workflows/test-push.yml
@@ -19,8 +19,8 @@ jobs:
       - if: ${{ steps.cache-boost.outputs.cache-hit != 'true' }}
         name: Install Boost
         run: script/install-boost.sh
-  unit-tests:
-    needs: install-boost
+  install-vendor:
+    needs: install-boost # only for sequencing cache
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -33,10 +33,31 @@ jobs:
         with:
           path: vendor
           key: ${{ runner.os }}-boost-${{ hashFiles('script/install-boost.sh', 'script/util.sh') }}
-      - name: Install libarchive
-        run: script/install-libarchive.sh
-      - name: Install Lighter Dependencies
-        run: script/install-deps.sh
+      - name: Cache Vendor
+        id: cache-vendor
+        uses: actions/cache@v4
+        with:
+          path: vendor
+          key: ${{ runner.os }}-vendor-${{ hashFiles('script/install-*.sh', 'script/util.sh') }}
+      - if: ${{ steps.cache-vendor.outputs.cache-hit != 'true' }}
+        name: Install Vendor
+        run: |
+          script/install-deps.sh
+          script/install-libarchive.sh
+  unit-tests:
+    needs: install-vendor
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [macos-latest]
+    steps:
+      - uses: actions/checkout@v4
+      - name: Restore Vendor
+        id: restore-vendor
+        uses: actions/cache@v4
+        with:
+          path: vendor
+          key: ${{ runner.os }}-vendor-${{ hashFiles('script/install-*.sh', 'script/util.sh') }}
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
