--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
 		"ts-loader": "^9.5.1",
 		"tsc": "^2.0.4",
 		"typescript": "^5.3.2",
-		"webpack": "^5.89.0"
-	},
-	"dependencies": {
+		"webpack": "^5.89.0",
 		"esmakefile": "^0.6.1"
 	}
 }
