--- a/.github/workflows/install-vendor.yml
+++ b/.github/workflows/install-vendor.yml
@@ -11,12 +11,19 @@ jobs:
         os: [macos-latest, ubuntu-latest]
     steps:
       - uses: actions/checkout@v4
+      - name: Generate Cache Key
+        id: gen-key
+        run: |
+          key="${{ runner.os }}-vendor-${{ hashFiles('script/install-*.sh', 'script/util.sh') }}"
+          assignment="vendor-key-${{ runner.os }}=$key"
+          echo "$assignment"
+          echo "$assignment" >> "$GITHUB_OUTPUT"
       - name: Cache Vendor Libraries
         id: cache-vendor
         uses: actions/cache@v4
         with:
           path: vendor
-          key: ${{ runner.os }}-vendor-${{ hashFiles('script/install-*.sh', 'script/util.sh') }}
+          key: ${{ steps.gen-key.outputs.vendor-key-${{ runner.os }} }}
       - if: ${{ steps.cache-vendor.outputs.cache-hit != 'true' }}
         name: Install Dependencies
         run: |
