--- a/.github/workflows/test-push.yml
+++ b/.github/workflows/test-push.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/cache@v4
         with:
           path: vendor
-          key: ${{ runner.os }}-vendor-${{ hashFiles('script/install-*.sh', 'script/util.sh') }}
+          key: ${{ fromJSON(jobs.install-vendor.outputs.vendor-keys)[runner.os] }}
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
