Couple versions between client/server distros
This is related to #47. For now in early stages, this is
desirable and I'm not worried about compatibility. Eventually,
these should be entirely separate repos with decoupled versions.

--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+	"name": "html_forms",
+	"version": "0.1.0",
 	"main": "build/webpack/browser.cjs",
 	"devDependencies": {
 		"@types/node": "^20.8.10",
