Rework unit tests to be reusable workflow

--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -1,12 +1,14 @@
 name: Unit Tests
 
-on: [push]
+on:
+  workflow_call:
+    inputs:
+      vendor-cache-keys:
+        type: string
+        required: true
 
 jobs:
-  install-vendor:
-    uses: ./.github/workflows/install-vendor.yml
-  unit-tests:
-    needs: install-vendor
+  run-unit-tests:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -18,7 +20,7 @@ jobs:
         uses: actions/cache@v4
         with:
           path: vendor
-          key: ${{ fromJSON(needs.install-vendor.outputs.cache-keys)[runner.os] }}
+          key: ${{ fromJSON(inputs.vendor-cache-keys)[runner.os] }}
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
