--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -10,3 +10,15 @@ jobs:
     uses: ./.github/workflows/run-unit-tests.yml
     with:
       vendor-cache-keys: ${{ needs.install-vendor.outputs.cache-keys }}
+  test-client-package:
+    needs: install-vendor
+    uses: ./.github/workflows/test-package.yml
+    with:
+      vendor-cache-keys: ${{ needs.install-vendor.outputs.cache-keys }}
+      package-name: html_forms
+  test-server-package:
+    needs: install-vendor
+    uses: ./.github/workflows/test-package.yml
+    with:
+      vendor-cache-keys: ${{ needs.install-vendor.outputs.cache-keys }}
+      package-name: html_forms_server
