--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -11,7 +11,7 @@ on:
         type: string
 
 jobs:
-  package:
+  create-package:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
@@ -32,3 +32,25 @@ jobs:
         with:
           name: ${{ inputs.package-name }}-tarball
           path: build/${{ inputs.package-name }}-*.tgz
+  test-package:
+    needs: create-package
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [macos-latest]
+    steps:
+      - uses: actions/checkout@v4
+      - name: Restore Vendor
+        id: restore-vendor
+        uses: actions/cache@v4
+        with:
+          path: vendor
+          key: ${{ fromJSON(inputs.vendor-cache-keys)[runner.os] }}
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 22.x
+      - run: npm ci
+      - uses: actions/download-artifact@v4
+        with:
+          name: ${{ inputs.package-name }}-tarball
+      - run: script/test-release.sh ${{ inputs.package-name }}-*.tgz
